fix ReviewCard overflow

--- a/src/styles/ReviewCard.module.css
+++ b/src/styles/ReviewCard.module.css
@@ -57,7 +57,7 @@
 
 @media only screen and (min-width: 768px) {
   .card {
-    height: 150px;
+    height: 200px;
     font-family: "Source Code Pro", monospace;
     background-color: #ffffff;
     padding: 1em;
